# BenchPiCalc

./: .clang-format  .gitignore  AvxPi.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SSE2Pi.md
PiBench/: CMakeLists.txt  PiBench.cpp
PiLib/: AtomicOmpPi.cpp  Avx512Pi.cpp  AvxPi.cpp  CMakeLists.txt  FalseSharingOmpPi.cpp  ForOmpPi.cpp  KomputePi.cpp  NaiveOmpPi.cpp  PiLib.h  SSE2Pi.cpp  SerialPi.cpp  SimdThreadPi.cpp  ThreadPi.cpp
PiLib/shaders/: PartialSum.comp  Reduce.comp
cmake/: Sanitizers.msvc.cmake  Warnings.msvc.cmake
notes/: AtomicOmpPi.md  Avx512Pi.md  AvxPi.md  FalseSharingOmpPi.md  ForOmpPi.md  KomputePi.md  NaiveOmpPi.md  SSE2Pi.md  SerialPi.md  SimdThreadPi.md  ThreadPi.md
